kubernetes/kustomize/nscale/extend/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nscale
spec:
  rules:
  - http:
      paths:
      - path: /nscalealinst1/
        pathType: Prefix
        backend:
          service:
            name: application-layer
            port:
              name: application
      - path: /index.html
        pathType: ImplementationSpecific
        backend:
          service:
            name: application-layer
            port:
              name: application
      - path: /res/
        pathType: Prefix
        backend:
          service:
            name: application-layer
            port:
              name: application
      - path: /engine.properties
        pathType: ImplementationSpecific
        backend:
          service:
            name: application-layer
            port:
              name: application
      - path: /console/
        pathType: Prefix
        backend:
          service:
            name: console
            port:
              name: console
      - path: /nscale_web/
        pathType: Prefix
        backend:
          service:
            name: application-layer-web
            port:
              name: web
      - path: /nscalemc/
        pathType: Prefix
        backend:
          service:
            name: monitoring-console
            port:
              name: monitoring
      - path: /rapadm/
        pathType: Prefix
        backend:
          service:
            name: administrator
            port:
              name: administrator
      - path: /modeler/
        pathType: Prefix
        backend:
          service:
            name: process-automation-modeler
            port:
              name: modeler
      - path: /cmis/
        pathType: Prefix
        backend:
          service:
            name: cmis-connector
            port:
              name: cmis
      - path: /erp-cmis/
        pathType: Prefix
        backend:
          service:
            name: erp-cmis-connector
            port:
              name: cmis
      - path: /sap_ilm/
        pathType: Prefix
        backend:
          service:
            name: erp-ilm-connector
            port:
              name: ilm
      - path: /dav/
        pathType: Prefix
        backend:
          service:
            name: webdav-connector
            port:
              name: webdav
      - path: /xta/
        pathType: Prefix
        backend:
          service:
            name: xta-connector
            port:
              name: xta
