kubernetes/kustomize/nscale/extend/ingress/administrator.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: administrator-ingress
spec:
  podSelector:
    matchLabels:
      app: administrator
  policyTypes:
  - Ingress
  ingress:
  - from:
    # access from system namespace (ingress)
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: TCP
        port: 8080
