kubernetes/kustomize/nscale/extend/ingress/console.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: console-ingress
spec:
  podSelector:
    matchLabels:
      app: console
  policyTypes:
  - Ingress
  ingress:
  - from:
    # access from system namespace (ingress)
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: TCP
        port: 8086
