kubernetes/kustomize/nscale/extend/ingress/erp-ilm-connector.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: erp-ilm-connector-ingress
spec:
  podSelector:
    matchLabels:
      app: erp-ilm-connector
  policyTypes:
  - Ingress
  ingress:
  - from:
    # access from system namespace (ingress)
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: TCP
        port: ilm
