kubernetes/kustomize/nscale/extend/ingress/monitoring-console.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: monitoring-console-ingress
spec:
  podSelector:
    matchLabels:
      app: monitoring-console
  policyTypes:
  - Ingress
  ingress:
  - from:
    # access from system namespace (ingress)
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: TCP
        port: monitoring
